--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
   "license": "MIT",
   "dependencies": {
     "typescript": "^5.3.3"
+  },
+  "devDependencies": {
+    "ts-node": "^10.9.2"
   }
 }
