--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
     "build": "tsc",
     "prepare": "npm run build && husky install",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "format": "prettier --write \"src/**/*.ts\" --write \"tests/**/*.ts\" --write .eslintrc.js",
+    "format": "prettier --write \"src/**/*.ts\" --write test-script.ts --write .eslintrc.js",
     "publish": "npm publish --access public",
     "lint": "eslint --fix --ext .ts src"
   },
   "author": "hayata-yamamoto",
   "license": "MIT",
   "devDependencies": {
+    "@types/async": "^3.2.24",
+    "@types/node": "^20.11.5",
     "@typescript-eslint/eslint-plugin": "^6.19.1",
     "eslint": "^8.56.0",
     "eslint-config-standard-with-typescript": "^43.0.1",
@@ -25,5 +27,8 @@
     "prettier": "3.2.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "async": "^3.2.5"
   }
 }
