--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "build": "tsc",
     "prepare": "npm run build && husky install",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "format": "prettier --write \"src/**/*.ts\" --write test-script.ts --write .eslintrc.js",
+    "format:lint": "eslint --fix --ext .ts src",
+    "format:prettier": "prettier --write \"src/**/*.ts\" --write test-script.ts --write .eslintrc.js",
+    "format": "run-s format:prettier format:lint",
     "publish": "npm publish --access public",
-    "lint": "eslint --fix --ext .ts src"
+    "lint": "eslint --fix --ext .ts src",
+    "build:doc": "jsdoc2md -f ./src/**/*.ts --config ./jsdoc2md.json > ./docs/Usage.md"
   },
   "author": "hayata-yamamoto",
   "license": "MIT",
@@ -29,6 +32,7 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
-    "async": "^3.2.5"
+    "async": "^3.2.5",
+    "npm-run-all": "^4.1.5"
   }
 }
