--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "husky": "^8.0.0",
     "prettier": "3.2.4",
     "ts-node": "^10.9.2",
+    "typedoc": "^0.25.8",
+    "typedoc-plugin-markdown": "^3.17.1",
     "typescript": "^5.3.3"
   },
   "dependencies": {
