--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -30,6 +30,14 @@ jobs:
         uses: actions/checkout@v4
       - name: Setup Pages
         uses: actions/configure-pages@v4
+      - uses: actions/setup-node@v3
+        with:
+          node-version: "20.x"
+          registry-url: "https://registry.npmjs.org"
+      - name: build docs
+        run: |
+          npm install
+          npx typedoc --plugin typedoc-plugin-markdown "src/**/*.ts"
       - name: Build with Jekyll
         uses: actions/jekyll-build-pages@v1
         with:
